
  [ Rico Tzschichholz ]
  * Bump build-dep on rustc >= 1.19.0 and cargo >= 0.20
  * Don't checkout locales on buildtime
    - debian/patches/dont-checkout-locales.patch
  * Build language packs based on web extensions
    - debian/build/rules.mk
  * Add ppc64/s390x build fixes
    - debian/patches/build-ppc64-s390x-nss.patch

  [ Chris Coulson ]
  * Refactor nsNativeMenuService ownership and shutdown behaviour - the only
    reference to it now is held by the service manager, and the global instance
    pointer is no longer cleared during the xpcom-shutdown notification. This
    fixes a shutdown UAF that appeared in the current Firefox version, where
    nsWindow and the associated nsMenuBar can be destroyed after xpcom-shutdown,
    when it was too late to clean up properly.
    - update debian/patches/unity-menubar.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Thu, 17 Aug 2017 12:49:43 +0200

firefox-trunk (56.0~a1~hg20170801r372091-0ubuntu1) artful; urgency=medium

  * Bump build-dep on rustc >= 1.17.0 and cargo >= 0.18
  * Add multiple ppc64/arm/s390x build fixes
    - debian/patches/build-arm.patch
    - debian/patches/build-ppc64-s390x-curl.patch
    - debian/patches/build-ppc64-s390x-rust.patch
  * Do not use compile-time page size for PowerPC
    - debian/patches/ppc-no-static-sizes.patch
  * Refresh patches
    - update debian/patches/revert-upstream-search-engine-changes.patch
    - update debian/patches/support-coinstallable-trunk-build.patch
  * Build-dep on clang-3.9, llvm-3.9-dev on 64bit archs for stylo
    - update debian/control{,.in}
  * Don't try to check checksums of windows-only binary files which are
    not included in the tarball
    - debian/patches/rust-drop-dll-checksums.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 01 Aug 2017 07:14:39 +0200

firefox-trunk (55.0~a1~hg20170611r363397-0ubuntu1) zesty; urgency=medium

  [ Chris Coulson ]
  * Build with rustc and cargo
    - update debian/control{,.in}