@@ -199,9 +199,9 @@ Icon=@MOZ_APP_NAME@
 Categories=GNOME;GTK;Network;WebBrowser;
 MimeType=text/html;text/xml;application/xhtml+xml;application/xml;application/rss+xml;application/rdf+xml;image/gif;image/jpeg;image/png;x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/ftp;x-scheme-handler/chrome;video/webm;application/x-xpinstall;
 StartupNotify=true
-Actions=NewWindow;NewPrivateWindow;
+Actions=new-window;new-private-window;
 
-[Desktop Action NewWindow]
+[Desktop Action new-window]
 Name=Open a New Window
 Name[ar]=افتح نافذة جديدة
 Name[ast]=Abrir una ventana nueva
@@ -239,9 +239,8 @@ Name[vi]=Mở cửa sổ mới
 Name[zh_CN]=新建窗口
 Name[zh_TW]=開啟新視窗
 Exec=@MOZ_APP_NAME@ -new-window
-OnlyShowIn=Unity;
 
-[Desktop Action NewPrivateWindow]
+[Desktop Action new-private-window]
 Name=Open a New Private Window
 Name[ar]=افتح نافذة جديدة للتصفح الخاص
 Name[ca]=Obre una finestra nova en mode d'incògnit
@@ -259,4 +258,3 @@ Name[tr]=Yeni bir pencere aç
 Name[uk]=Відкрити нове вікно у потайливому режимі
 Name[zh_TW]=開啟新隱私瀏覽視窗
 Exec=@MOZ_APP_NAME@ -private-window
-OnlyShowIn=Unity;
