@@ -8,6 +8,9 @@ firefox-trunk (57.0~a1~hg20170816r375058-0ubuntu1) UNRELEASED; urgency=medium
     - debian/build/rules.mk
   * Add ppc64/s390x build fixes
     - debian/patches/build-ppc64-s390x-nss.patch
+  * Don't restrict Destop Actions to Unity (LP: #1615549)
+    and make them compliant with GNOME-Shell
+    - debian/firefox.desktop.in
 
   [ Chris Coulson ]
   * Refactor nsNativeMenuService ownership and shutdown behaviour - the only
